manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: default
  labels:
    app: app1
    env: test
    version: v1
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  replicas: 1
  selector:
    matchLabels:
      app: app1
      env: test
  template:
    metadata:
      labels:
        app: app1
        env: test
        version: v1
    spec:
      containers:
      - name: app1
        image: hscrystal/app1:7.0.4
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 5
