manifest/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: default
spec:
  selector:
    app: app1
  ports:
  - name: http
    port: 80
    targetPort: 80
